fix: right box text visiblity from with type

--- a/editor-components/header/header32/header32.module.scss
+++ b/editor-components/header/header32/header32.module.scss
@@ -249,6 +249,7 @@
                     > div {
                       display: flex;
                       justify-content: center;
+                      width: 100% !important;
                     }
                     .urlTitles {
                       font-size: 1rem;
